@@ -70,7 +70,7 @@ public class BanHangOffline {
         List<Voucher> voucher = voucherRepository.findAll();
         List<SanPhamChiTiet> spct = sanPhamChiTietRepository.findAll();
         List<Voucher> validVouchers = new ArrayList<>();
-        List<KhachHang> listkh = khachHangRepository.findAll();
+        List<KhachHang> listkh = khachHangRepository.timkhachhang();
         for (Voucher v : voucher) {
             try {
                 int soLuong = Integer.parseInt(v.getSoLuong());
@@ -103,7 +103,7 @@ public class BanHangOffline {
         List<Voucher> voucher = voucherRepository.findAll();
         List<SanPhamChiTiet> spct = sanPhamChiTietRepository.findAll();
         List<Voucher> validVouchers = new ArrayList<>();
-        List<KhachHang> listkh = khachHangRepository.findAll();
+        List<KhachHang> listkh = khachHangRepository.timkhachhang();
         for (Voucher v : voucher) {
             try {
                 int soLuong = Integer.parseInt(v.getSoLuong());
@@ -332,9 +332,19 @@ public class BanHangOffline {
         SanPhamChiTiet spct = sanPhamChiTietRepository.findByMaspct(maspct);
         System.out.println("mã spct" + maspct);
         HoaDonCT hoaDonCT = new HoaDonCT();
+        if(spct == null){
+            redirectAttributes.addFlashAttribute("loi", "Không tìm thấy sản phẩm");
+            return ResponseEntity.badRequest().body(Map.of("message","Không tìm thấy sản phẩm!"));
+        }
         if(idhd == null){
             redirectAttributes.addFlashAttribute("loi", "Chưa chọn hóa đơn!");
             return ResponseEntity.badRequest().body(Map.of("message","Chưa chọn hóa đơn!"));
+        }
+        if(spct == null){
+
+            redirectAttributes.addFlashAttribute("loi", "Không tìm thấy sản phẩm");
+            return ResponseEntity.badRequest().body(Map.of("message","Không tìm thấy sản phẩm!"));
+
         }
         int soLuongTonKho = spct.getSoluongsanpham();
 
@@ -409,7 +419,9 @@ public class BanHangOffline {
         response.put("tenkh", kh.getTenkhachhang());
         response.put("id", String.valueOf(kh.getId()));
         response.put("sdt", kh.getSdt());
-        response.put("diachi", kh.getDiachi());
+
+        response.put("diachi", kh.getDiachi() != null ? kh.getDiachi() :"Trống");
+
         response.put("idTinhThanhPho", kh.getTinhtp() != null ? kh.getTinhtp() : "");
         response.put("idQuanHuyen", kh.getQuanhuyen() != null ? kh.getQuanhuyen() : "");
         response.put("idXaPhuong", kh.getXaphuong() != null ? kh.getXaphuong() : "");
@@ -426,14 +438,14 @@ public class BanHangOffline {
         Map<String, String> response = new HashMap<>();
         DecimalFormat decimalFormat = new DecimalFormat("#,###.00");
         BigDecimal tt = tongtien(idhd);
-        BigDecimal thanhtien;
+        BigDecimal thanhtien = BigDecimal.ZERO;
         String loai = "0";
 
         Optional<Voucher> checkvoucher = voucherRepository.findByMa(id);
-        if (checkvoucher.isPresent()) {
+        if (checkvoucher.isPresent() && checkvoucher.get().getTrangThai() == 1 &&
+                Integer.parseInt(checkvoucher.get().getSoLuong()) >= 1) {
             Voucher voucher = checkvoucher.get();
             System.out.println("Voucher ID nhận từ client: " + id);
-
             int mucgiam = Integer.parseInt(voucher.getMucGiam());
             int giamin = Integer.parseInt(voucher.getDieuKien());
             if (tt.compareTo(new BigDecimal(giamin)) < 0) {
@@ -443,11 +455,18 @@ public class BanHangOffline {
             if (voucher.isLoai()) {
                 BigDecimal mucGiamBD = new BigDecimal(mucgiam);
                 BigDecimal sophantram = tt.divide(new BigDecimal(100), RoundingMode.HALF_UP).multiply(mucGiamBD);
-                thanhtien = tt.subtract(sophantram);
                 loai = voucher.getMucGiam() + "% ";
             } else {
                 thanhtien = tt.subtract(new BigDecimal(mucgiam));
                 BigDecimal giamgia = new BigDecimal(voucher.getMucGiam());
+                if(thanhtien.compareTo(giamgia) <= 0){
+                    thanhtien = BigDecimal.ZERO;
+                    System.out.println("0dd" +thanhtien);
+                    System.out.println("mức giảm vnd : " +giamgia);
+                }else{
+                    thanhtien = tt.subtract(giamgia);
+                    System.out.println("tiền gốc " +thanhtien);
+                }
                 String formattedgiamgia = decimalFormat.format(giamgia);
                 loai = formattedgiamgia + " VND ";
             }
@@ -455,13 +474,15 @@ public class BanHangOffline {
             response.put("error", "Voucher không tồn tại hoặc đã hết");
             System.out.println("Voucher không tồn tại.");
             thanhtien = tt;
+            System.out.println("không vc :" +thanhtien);
             loai = "0";
             return ResponseEntity.badRequest().body(response);
         }
         String formattedThanhtien = decimalFormat.format(thanhtien);
+        System.out.println("a"+formattedThanhtien+"a");
 
         response.put("thanhtien", formattedThanhtien);
-        response.put("thanhtien", formattedThanhtien);
+//        response.put("thanhtien", formattedThanhtien);
         response.put("thanhTien", String.valueOf(thanhtien));
         response.put("tt", String.valueOf(tt));
         response.put("mavocher", checkvoucher.isPresent() ? checkvoucher.get().getMa() : "");
@@ -491,14 +512,17 @@ public class BanHangOffline {
             @RequestParam(value = "tongtien",defaultValue = "0") BigDecimal tongtien,
             @RequestParam("sdt") String sdt,
             @RequestParam("giaohang") String giaohang,
-            @RequestParam("tinh") String tinh,
-            @RequestParam("huyen") String huyen,
-            @RequestParam("xa") String xa,
-            @RequestParam("tentinh") String tentinh,
-            @RequestParam("tenhuyen") String tenhuyen,
-            @RequestParam("tenxa") String tenxa,
-            @RequestParam(value = "diachicuthe",defaultValue = "trống") String diachicuthe,
+//            @RequestParam("tinh") String tinh,
+//            @RequestParam("huyen") String huyen,
+//            @RequestParam("xa") String xa,
+//            @RequestParam("tentinh") String tentinh,
+//            @RequestParam("tenhuyen") String tenhuyen,
+//            @RequestParam("tenxa") String tenxa,
+
+            @RequestParam(value = "diachicuthe",defaultValue = "Trống") String diachicuthe,
+
             @RequestParam(value = "ghichu",defaultValue = "trống") String ghichu,
+
             @RequestParam(value = "tenkh",defaultValue= "Khách lẻ") String tenkh,
             @RequestParam("mucgiam") String giagiam,
             @RequestParam(value = "checkbox-tt",defaultValue = "1") String checkbox,
@@ -530,15 +554,30 @@ public class BanHangOffline {
             model.addAttribute("loi", "Chưa có sản phẩm nào");
             return "redirect:/panda/banhangoffline/muahang/" + idhoadon;
         }
+
+
         if(giaohang.equals("1")){
-            if(sdt.isBlank() || diachicuthe.isBlank()){
+            if(sdt.trim().isEmpty() || diachicuthe.trim().isEmpty()){
+
                 redirectAttributes.addFlashAttribute("loi", "Chưa nhập đầy đủ thông tin người nhận");
                 return "redirect:/panda/banhangoffline/muahang/" + idhoadon;
             }
             dh.setTrangThai("Đã duyệt");
         }
+
+        if(checkbox.equals("0") && giaohang.equals("1") ){
+            dh.setTrangthaioffline(true);
+            hd.setTttt(0);
+        }else{
+            dh.setTrangthaioffline(false);
+            hd.setTttt(1);
+        }
+
+
+
         if (sdt.isBlank()) {
             KhachHang kh1 = khachHangRepository.findById(6).orElse(null);
+
             if (kh1 != null) {
                 System.out.println("Khách hàng mặc định");
                 hd.setKhachHang(kh1);
@@ -555,29 +594,36 @@ public class BanHangOffline {
                 }
                 kh = new KhachHang();
                 String maKhachHang = "KH" + UUID.randomUUID().toString().replace("-", "").substring(0, 6);
-                kh.setTenkhachhang(tenkh);
                 kh.setMakhachhang(maKhachHang);
+                kh.setTenkhachhang(tenkh);
                 kh.setTrangthai(1);
+                kh.setDelete(true);
+                kh.setTinhtrang(true);
                 kh.setSdt(sdt);
                 kh.setDiachi(diachicuthe);
-                kh.setTinhtp(tinh);
-                kh.setQuanhuyen(huyen);
-                kh.setXaphuong(xa);
-                kh.setTentinh(tentinh);
-                kh.setTenhuyen(tenhuyen);
-                kh.setTenxa(tenxa);
+//                kh.setTinhtp(tinh);
+//                kh.setQuanhuyen(huyen);
+//                kh.setXaphuong(xa);
+//                kh.setTentinh(tentinh);
+//                kh.setTenhuyen(tenhuyen);
+//                kh.setTenxa(tenxa);
                 System.out.println("Thêm khách hàng mới");
                 khachHangRepository.save(kh);
             } else {
                 kh.setTenkhachhang(tenkh);
                 kh.setSdt(sdt);
                 kh.setDiachi(diachicuthe);
-                kh.setTinhtp(tinh);
-                kh.setQuanhuyen(huyen);
-                kh.setXaphuong(xa);
-                kh.setTentinh(tentinh);
-                kh.setTenhuyen(tenhuyen);
-                kh.setTenxa(tenxa);
+
+                kh.setTrangthai(1);
+                kh.setTinhtrang(true);
+                kh.setDelete(true);
+
+//                kh.setTinhtp(tinh);
+//                kh.setQuanhuyen(huyen);
+//                kh.setXaphuong(xa);
+//                kh.setTentinh(tentinh);
+//                kh.setTenhuyen(tenhuyen);
+//                kh.setTenxa(tenxa);
                 System.out.println("Cập nhật khách hàng");
                 khachHangRepository.save(kh);
             }
@@ -656,14 +702,6 @@ public class BanHangOffline {
         hd.setGhiChu(ghichu);
 
 
-        if(checkbox.equals("0")){
-            dh.setTrangthaioffline(true);
-            hd.setTttt(0);
-        }else{
-            dh.setTrangthaioffline(false);
-            hd.setTttt(1);
-
-        }
 
         hoaDonRepository.save(hd);
 
@@ -678,6 +716,8 @@ public class BanHangOffline {
         dh.setHinhthuc(1);
         donHangRepository.save(dh);
         this.idhd = null;
+        redirectAttributes.addFlashAttribute("message","Thanh toán thành công");
+        model.addAttribute("message","Thanh toán thành công");
         return "redirect:/panda/banhangoffline";
     }
 
